# ChangeLog for dev-python/kiwi
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/kiwi/ChangeLog,v 1.4 2007/02/16 09:09:34 dev-zero Exp $

*kiwi-1.9.13 (16 Feb 2007)

  16 Feb 2007; Tiziano Müller <dev-zero@gentoo.org> +kiwi-1.9.13.ebuild:
  Version bump. Small cleanups, added doc and examples USE-flags.

  07 Feb 2007; Rob Cakebread <pythonhead@gentoo.org> kiwi-1.9.11.ebuild:
  Move docs to proper directory. Thanks Chris Mayo <mayo@clara.co.uk> bug# 165143

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> kiwi-1.9.11.ebuild:
  add ~amd64, bug 162948

*kiwi-1.9.11 (19 Oct 2006)

  19 Oct 2006; Rob Cakebread <pythonhead@gentoo.org> +metadata.xml,
  +kiwi-1.9.11.ebuild:
  Initial commit. Thank you Jason Pepas <j.pepas@mail.utexas.edu> bug# 137441
