@@ -1,24 +1,26 @@
-DIST kiwi-1.9.11.tar.gz 1198546 RMD160 00abb0668197a7a2980ae537116f41ca2c4c5e2a SHA1 413b0a286e5c7d7647c560ae0a936b40b5af6b0d SHA256 7765c1dbe8cd74dd0a4c1acbc9c30d503ec3e206113a74c61294e3111fe1aab2
-DIST kiwi-1.9.13.tar.gz 1205528 RMD160 139f8a32a647eb97c52f28899ae4214ab9ae1a5f SHA1 5df905a19034107ef815f50be97dd190e4b876cb SHA256 f999eadfaf03358f0924dbb8122f3bda157fedb027fc6ed7993b45f7969f1702
-EBUILD kiwi-1.9.11.ebuild 708 RMD160 9aca4c9e22f56f5237064029c739ddf9f82437d5 SHA1 c5ef1beaf7ddc3bdc10e8558cff4aa98fe2c4db7 SHA256 2cf690ddd2ee33e95177d469075eecedb6d1e7f1ba9b53a6f24885e45ba612cc
-MD5 240a039ca1ead8d0aec85ded914db23c kiwi-1.9.11.ebuild 708
-RMD160 9aca4c9e22f56f5237064029c739ddf9f82437d5 kiwi-1.9.11.ebuild 708
-SHA256 2cf690ddd2ee33e95177d469075eecedb6d1e7f1ba9b53a6f24885e45ba612cc kiwi-1.9.11.ebuild 708
-EBUILD kiwi-1.9.13.ebuild 972 RMD160 bd69bd61e30c7812644c3905a490df4263b6ab4c SHA1 ced437e8318393584f2b12e622208888d393f951 SHA256 766195db282a778afe56299c7cc768e7b298b9bf1356a37c3bd780db77d45312
-MD5 aee3b5a81c9d2ab9eb0aa14b2135d460 kiwi-1.9.13.ebuild 972
-RMD160 bd69bd61e30c7812644c3905a490df4263b6ab4c kiwi-1.9.13.ebuild 972
-SHA256 766195db282a778afe56299c7cc768e7b298b9bf1356a37c3bd780db77d45312 kiwi-1.9.13.ebuild 972
-MISC ChangeLog 821 RMD160 7377547d3da759d1b783fcbf541037fabd72e761 SHA1 a1964b20f72bae96f90a61a1f916f957ef126768 SHA256 fdf40dfa03802d2e4ad16798c99518594d82fce0f5a9cb1596428ebfbcef8ae0
-MD5 65f4210e5c1ebc19f03dcbb2d8234a35 ChangeLog 821
-RMD160 7377547d3da759d1b783fcbf541037fabd72e761 ChangeLog 821
-SHA256 fdf40dfa03802d2e4ad16798c99518594d82fce0f5a9cb1596428ebfbcef8ae0 ChangeLog 821
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+DIST kiwi-1.9.14.tar.gz 1218989 RMD160 aff7ccf449c3fe9cdc318de72e654711f6f559c8 SHA1 86aca795457a3d6e9cc4ba40e414e67578a2ee3a SHA256 0536bc852993b048c11d27c3ba97241b9843f23dc98f339b8330d16408f67849
+EBUILD kiwi-1.9.14.ebuild 970 RMD160 0560f915c3489119505b5c52e313b642c82ec4d3 SHA1 f0064a5e7150bb4536f4531d3af5d961d014ae57 SHA256 211172f7f8934bb1824f6d62ba595138ddd5a1dadff0ed344ead1a305e65e074
+MD5 282d00a9fe9fd08b21c58cb5380e1978 kiwi-1.9.14.ebuild 970
+RMD160 0560f915c3489119505b5c52e313b642c82ec4d3 kiwi-1.9.14.ebuild 970
+SHA256 211172f7f8934bb1824f6d62ba595138ddd5a1dadff0ed344ead1a305e65e074 kiwi-1.9.14.ebuild 970
+MISC ChangeLog 1005 RMD160 105872a8438848a7f7c8313dd1a7655ae48bd520 SHA1 45d39879c1f043ac84281998b2aa4606cd1282a2 SHA256 48386b0986337e768e624da2af3c04a1bd530aa43a3e019f9348ac9f7221a275
+MD5 0a468de6f75b2e55327a51761aac0abb ChangeLog 1005
+RMD160 105872a8438848a7f7c8313dd1a7655ae48bd520 ChangeLog 1005
+SHA256 48386b0986337e768e624da2af3c04a1bd530aa43a3e019f9348ac9f7221a275 ChangeLog 1005
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 MD5 9ac4199ebe7cd3e7e311274994767f82 metadata.xml 160
 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb metadata.xml 160
 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a metadata.xml 160
-MD5 3a0d5347083cd797c25493248a64481d files/digest-kiwi-1.9.11 238
-RMD160 29cd54cd15e4f841d6c9a787da8016178c190752 files/digest-kiwi-1.9.11 238
-SHA256 42eae7e9cf52eb41801e4888a54197389132dab9ec56eb4885ff1cd94175ba99 files/digest-kiwi-1.9.11 238
-MD5 f177dac631ab00be978f1d9c02943271 files/digest-kiwi-1.9.13 238
-RMD160 f712c706413bdb6ff254d4b8f3be4dc4b500b27a files/digest-kiwi-1.9.13 238
-SHA256 b54496f65d858f07d1ff12c033b6f69f3cb72606b7bf4f98240e4af631e2cb69 files/digest-kiwi-1.9.13 238
+MD5 90c85a48aa59f57399c629df6a9f1d96 files/digest-kiwi-1.9.14 238
+RMD160 8d625e926344efb8f713ddef65f73933ecfa8fb8 files/digest-kiwi-1.9.14 238
+SHA256 ca6c9bdb3a8d3f1034eac17143989a89c37f08520ab795945c55163073d49075 files/digest-kiwi-1.9.14 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGE/7G2jLqHNfbg2URAoXTAKDUYo56vn+697coEwRAEOLIBQo/ZACeJSvp
+RTAjJNiwOZ3Gc8KMsPpdL+o=
+=HcRx
+-----END PGP SIGNATURE-----
