@@ -1,3 +1,0 @@
-MD5 f1b516765b980b9feebd6f43722088d2 kiwi-1.9.11.tar.gz 1198546
-RMD160 00abb0668197a7a2980ae537116f41ca2c4c5e2a kiwi-1.9.11.tar.gz 1198546
-SHA256 7765c1dbe8cd74dd0a4c1acbc9c30d503ec3e206113a74c61294e3111fe1aab2 kiwi-1.9.11.tar.gz 1198546
