@@ -1,3 +1,0 @@
-MD5 7b8ca391456dff48a953534495416e9e kiwi-1.9.13.tar.gz 1205528
-RMD160 139f8a32a647eb97c52f28899ae4214ab9ae1a5f kiwi-1.9.13.tar.gz 1205528
-SHA256 f999eadfaf03358f0924dbb8122f3bda157fedb027fc6ed7993b45f7969f1702 kiwi-1.9.13.tar.gz 1205528
