@@ -1,0 +1,3 @@
+MD5 dc5a6b8173c133644d8b84127448e0ed kiwi-1.9.14.tar.gz 1218989
+RMD160 aff7ccf449c3fe9cdc318de72e654711f6f559c8 kiwi-1.9.14.tar.gz 1218989
+SHA256 0536bc852993b048c11d27c3ba97241b9843f23dc98f339b8330d16408f67849 kiwi-1.9.14.tar.gz 1218989
